list sessions and remove unused feedback link

--- a/app/assets/stylesheets/partials/_colors.css.sass
+++ b/app/assets/stylesheets/partials/_colors.css.sass
@@ -3,6 +3,7 @@ $navigation-gray: #fdfdfd
 $navigation-gray-separators: #dddedd
 $nav-block-border: #e5e2e0
 $gray-title-button: #f5f5f5
+$red: #C40233
 
 $become-member-grey: #5e5a6b
 $become-member-white: #f1f1f3
