--- a/app/assets/stylesheets/style.css.sass
+++ b/app/assets/stylesheets/style.css.sass
@@ -266,9 +266,12 @@ a
   border-left: 10px solid $code-of-conduct-purple
   background-color: $gray-title-button
 
-.course
+.course, .session
   border-left: 10px solid $next-course-green
   background-color: $next-session-grey
+
+  &.past
+    border-left: 10px solid $red
 
 .titlebox
   padding: 10px 20px
