--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,9 +24,11 @@
               <%= link_to "Wall of Fame", wall_of_fame_path %>
             </li>
             <li>
+            <%= link_to "Sessions", sessions_path %>
+            </li>
+            <li>
             <%= link_to "Courses", courses_path %>
             </li>
-            <li><a href="">Feedback</a></li>
             <%=link_to "Become a member", new_members_path, class: 'member-button'%>
           </ul>
         </div>
