--- a/app/assets/stylesheets/style.css.sass
+++ b/app/assets/stylesheets/style.css.sass
@@ -87,6 +87,7 @@ a
   height: 6px
   background-color: #2c173a
   border-bottom: 2px solid #b9b1bf
+  min-width: 908px
 
 #nav-inside
   min-width: 900px
@@ -98,6 +99,7 @@ a
   background-color: $navigation-gray
   border-bottom: 1px solid $nav-block-border
   width: 100%
+  min-width: 908px
   padding-top: 10px
 
 .member-button
@@ -247,12 +249,6 @@ a
 .center
   text-align: center
 
-@media(max-width: 900px)
-  .left-panel, .right-panel
-    width: 100%
-
-  .right-panel
-    text-align: center
 
 .session
   background-color: $next-session-grey
@@ -402,13 +398,14 @@ footer
   background-color: $dark-purple
   padding-top: 20px
   margin-bottom: 0
-  padding: 30px
+  padding: 30px 0
+  width: 100%
+  min-width: 908px
 
   #footer-width
     margin: 0 auto
-    max-width: 1100px
-    min-width: 900px
-    width: 100%
+    min-width: 840px
+    width: 80%
 
   .dot-footer
     background: image-url("dot.png") no-repeat scroll 0 0 rgba(0, 0, 0, 0)
@@ -428,3 +425,44 @@ footer
   .right-float
     float: right
     margin: 15px
+
+@media (max-width: 960px)
+  #container
+    border: none
+
+  .left-panel, .right-panel
+    max-width: none
+
+  .left-panel
+    padding-right: 0
+    width: 100%
+
+  .right-panel
+    width: 92%
+
+  .right-block
+    width: 96%
+
+  .sponsors
+    li
+      display: inline-block
+      width: 260px
+
+  .gallery
+    padding: 5px 0 0 0
+    margin-bottom: 0
+
+    li
+      margin-top: 0px
+      display: inline-block
+
+      img
+        width: 250px
+        height: 166px
+
+  .social
+    padding-left: 0
+
+    li:first-child
+      margin-left: 20px
+
