--- a/app/assets/stylesheets/style.css.sass
+++ b/app/assets/stylesheets/style.css.sass
@@ -6,7 +6,8 @@ body
   font-family: proxima-nova, Helvetica, Arial, sans-serif
   font-size: 100%
   background-color: #ebe6e2
-  background: image-url("background.jpg") no-repeat fixed 0 0 rgba(0, 0, 0, 0)
+  background: image-url("background.jpg") no-repeat fixed center top rgba(0, 0, 0, 0)
+  background-size: 100% auto
 
 ul
   list-style: none
