--- a/app/assets/stylesheets/mobile.sass
+++ b/app/assets/stylesheets/mobile.sass
@@ -62,6 +62,8 @@
       margin: -1px 0 0 0
       background: #57ae3b
       border-radius: 0
+  .expand-mobile
+    display: block
   #container
     float: left
     width: 100%
