add space between session listing

--- a/app/assets/stylesheets/style.css.sass
+++ b/app/assets/stylesheets/style.css.sass
@@ -342,6 +342,8 @@ a
       color: $title-side
       margin: 21px 0 26px
 
+#sessions ul li
+  margin-bottom: 15px
 
 .social
   margin: 10px 0 27px
