display meeting on dashboard and meeting page

--- a/app/assets/stylesheets/partials/_colors.css.sass
+++ b/app/assets/stylesheets/partials/_colors.css.sass
@@ -24,6 +24,7 @@ $our-mission-purple: #6f4a93
 $next-session-yellow: #fdcc38
 $next-course-green: #57ae3b
 $code-of-conduct-purple: #ccc0d6
+$meeting-title: #241A62
 
 $dark-purple: #1f1430
 $titles-dark-purple: #4c4066
