--- a/app/assets/stylesheets/style.css.sass
+++ b/app/assets/stylesheets/style.css.sass
@@ -395,6 +395,8 @@ a
     padding: 13px 42px
     box-shadow: 0 1px 1px rgba(114, 98, 154, 0.4)
     font-size: 20px
+    overflow: hidden
+    white-space: nowrap
 
 footer
   border-top: 1px solid $nav-block-border
