Add info for students and coaches to welcome email

--- a/app/views/member_signup_mailer/welcome_email.html.erb
+++ b/app/views/member_signup_mailer/welcome_email.html.erb
@@ -2,4 +2,9 @@
 <p>
   You have successfully signed up to Codebar.io.
 </p>
+
+<% @member.roles.each do |role| %>
+  <%= render partial: "member_signup_mailer/#{role.name.downcase}" %>
+<% end %>
+
 <p>Thanks for joining and have a great day!</p>
