--- a/app/assets/stylesheets/style.css.sass
+++ b/app/assets/stylesheets/style.css.sass
@@ -121,6 +121,7 @@ a
 .quarter, .half, .third, .two-thirds, .row
   display: inline-block
   padding-right: 20px
+  vertical-align: top
 
 .quarter
   width: 25%
@@ -465,3 +466,11 @@ footer
 .right-float
   float: right
   margin: 15px
+
+#sessions
+  ul.contact-details
+    padding: 0
+    font-size: 0.8em
+
+    li
+      margin-bottom: 5px
