--- a/app/views/dashboard/show.html.haml
+++ b/app/views/dashboard/show.html.haml
@@ -56,8 +56,9 @@
             = "on #{l(@next_session.date_and_time, format: :website_format)}"
         %p.lead.move-top
           We run sessions weekly where we offer guided help in going through HTML/CSS, Javascript and Ruby tutorials - and not just that! There, you will also get the opportunity to meet other people interested in coding and pair with them. If you would like to attend as a student or help out as a coach you can do so by signing up.
-        .sub-block
-          = link_to "Sign up to the session", "/auth/github", class: 'member-button'
+        - unless logged_in?
+          .sub-block
+            = link_to "Sign up to the session", "/auth/github", class: 'member-button'
 
     - if @next_course.present?
       .titlebox.course
@@ -76,8 +77,9 @@
           = @next_course.short_description.html_safe
           %small
             =link_to "read more about the course", @next_course
-        .sub-block
-          =link_to "Sign up to the course", new_member_path, class: 'member-button'
+        - unless logged_in?
+          .sub-block
+            =link_to "Sign up to the course", new_member_path, class: 'member-button'
 
 
     .titlebox#code-of-conduct
