--- a/app/views/invitation/show.html.haml
+++ b/app/views/invitation/show.html.haml
@@ -8,29 +8,26 @@
   .row
     .two-thirds
       .description
-        .details-block
-          %h3= @invitation.sessions.title
-          %h5= @invitation.sessions.description
-          %br
-      .description
-        %small
-          In our coding sessions, you will get to go through any of our available tutorials with help from our coaches. Our latest tutorial is <b>#{@invitation.sessions.title}</b>
-          %br
-          %br
+        Hi #{@invitation.member.name},
+        %p Please let us know if you will be attending our session by setting your attendance status.
+
+        %p In our coding sessions, you will get to go through any of our available tutorials with help from our coaches. Our latest tutorial is <b> #{@invitation.sessions.title}</b> - #{@invitation.sessions.description}
+        %hr
+        %p.rsvp
           - if @invitation.sessions.date_and_time < DateTime.now
-            This session has already taken place!
+            %em This session has already taken place!
           - else
-            .rsvp
-              - if @invitation.attending.eql?(true)
-                =link_to "Attending", "#", class: "btn"
-                - if @invitation.sessions.date_and_time-1.day <= DateTime.now
-                  %br
-                  %br
-                  %small The session is on in less than 24 hours! If you can no longer make it, please send us a text so we can try to reallocate your spot.
-                - else
-                  =link_to "Unable to attend", reject_invitation_url(@invitation), class: "button"
+            %h3 RSVP
+            - if @invitation.attending.eql?(true)
+              =link_to "Attending", "#", class: "btn"
+              - if @invitation.sessions.date_and_time-1.day <= DateTime.now
+                %br
+                %br
+                %small The session is on in less than 24 hours so you can no longer change you attendance status through here. If you can no longer make it, please send us a text or email meetings@codebar.io so we can try to reallocate your spot.
               - else
-                =link_to "Attend", accept_invitation_url(@invitation), class: "button"
+                =link_to "Unable to attend", reject_invitation_url(@invitation), class: "button"
+            - else
+              =link_to "Attend", accept_invitation_url(@invitation), class: "button"
 
     .quarter
       .description
