sessions + courses pages

--- a/app/assets/stylesheets/partials/_colors.css.sass
+++ b/app/assets/stylesheets/partials/_colors.css.sass
@@ -4,6 +4,8 @@ $navigation-gray-separators: #dddedd
 $nav-block-border: #e5e2e0
 $gray-title-button: #f5f5f5
 $red: #C40233
+$lightgreen: #69b986
+$lightyellow: #f8d773
 
 $become-member-grey: #5e5a6b
 $become-member-white: #f1f1f3
