add basic member portal for coaches and students

--- a/app/assets/stylesheets/style.css.sass
+++ b/app/assets/stylesheets/style.css.sass
@@ -301,7 +301,7 @@ a
   &.past
     border-left: 10px solid $lightgreen
 
-.session 
+.session
   &.upcoming
     background-color: $next-session-grey
   &.past
@@ -487,3 +487,15 @@ footer
 
     li
       margin-bottom: 5px
+
+#tabs
+  margin-left: 20px
+
+  a
+    background-color: #F5F5F5
+    padding: 5px 10px
+    box-shadow: 0 0 1px rgba(177, 166, 204, 0.5) inset
+
+  .active
+    border-left: 5px solid
+    transition-duration: 0.2s
