--- a/app/views/feedback/success.html.haml
+++ b/app/views/feedback/success.html.haml
@@ -1,1 +1,6 @@
-=I18n.t("messages.feedback_saved")
+.success_container
+  .success
+    =I18n.t("messages.feedback_saved")
+
+  =link_to "Return to homepage >>", root_path
+  
