Tutorial belongs to session. Improve feedback not_found page style

--- a/app/assets/stylesheets/style.css.sass
+++ b/app/assets/stylesheets/style.css.sass
@@ -500,7 +500,7 @@ footer
     border-left: 5px solid
     transition-duration: 0.2s
 
-.success_container
+.message_container
   padding: 90px
   text-align: center
   line-height: 2em
@@ -513,9 +513,17 @@ footer
     padding: 20px
     border-radius: 5px
 
+  .error
+    color: #500000
+    border: 1px solid #fc5959
+    background-color: #FFBEBE
+    margin: 0px 20px
+    padding: 20px
+    border-radius: 5px
+
 .validation_errors
   font-size: 14px
-  border: 1px solid rgb(252, 89, 89)
+  border: 1px solid #fc5959
   background-color: #FFBEBE
   margin: 20px 0px
   border-radius: 5px
