--- a/app/views/feedback/not_found.html.haml
+++ b/app/views/feedback/not_found.html.haml
@@ -1,1 +1,4 @@
-.feedback_not_found Sorry, feedback link seems to be invalid.
+.message_container
+  .error
+    =I18n.t("messages.feedback_not_found")
+  =link_to "Return to homepage >>", root_path
