handle both student and coaches attending invites

--- a/app/views/admin/portal/index.html.haml
+++ b/app/views/admin/portal/index.html.haml
@@ -10,8 +10,7 @@
 
         %h4 Attending
         %ul.attendances
-          - session.attending_invitations.each do |invitation|
+          - session.attending_students.each do |invitation|
             %li
               =invitation.member.full_name
-
 
