automate coaches invitations.

--- a/app/views/invitation/show.html.haml
+++ b/app/views/invitation/show.html.haml
@@ -9,9 +9,7 @@
     .two-thirds
       .description
         Hi #{@invitation.member.name},
-        %p Please let us know if you will be attending our session by setting your attendance status.
-
-        %p In our coding sessions, you will get to go through any of our available tutorials with help from our coaches. Our latest tutorial is <b> #{@invitation.sessions.title}</b> - #{@invitation.sessions.description}
+        = render partial: @invitation.role.downcase
         %hr
         %p.rsvp
           - if @invitation.sessions.date_and_time < DateTime.now
