this is for people who didn't bother reading the text on the first page

--- a/app/views/session_invitation_mailer/invite_student.html.erb
+++ b/app/views/session_invitation_mailer/invite_student.html.erb
@@ -1,7 +1,11 @@
 <h2 style="font-weight: 400; font-size: 24px; border-bottom:1px solid #ececec; padding-bottom: 15px; margin-bottom:35px">Hi <%= @member.name %></h2>
 
 <h3 style="font-weight: 600; font-size: 17px; letter-spacing: 0.02em; color: #111111">We would like to invite you to the next <b>codebar</b> session</h3>
-<p style="font-weight: 300; font-size: 16px; color: #2e2e2e; margin-bottom: 50px;"> In our sessions, you will be able to go through any of our available HTML/CSS and Javascript tutorials or get guidance on your personal projects with help from our <b>superstar coaches</b>. You will also get the opportunity to meet other people interested in coding and pair with them.<br></p>
+<p style="font-weight: 300; font-size: 16px; color: #2e2e2e;"> In our sessions, you will be able to go through any of our available HTML/CSS and Javascript tutorials or get guidance on your personal projects with help from our <b>superstar coaches</b>. You will also get the opportunity to meet other people interested in coding and pair with them.<br></p>
+
+<p style="font-weight: 300; font-size: 16px; color: #2e2e2e; margin-bottom: 50px;">
+If you are not a woman, but are part of an underrepresented minority or have any other reasons that you think you should be attending our sessions, reply to this email and let us know why. <b>codebar</b> exists to promote diversity and help breach the gender gap in the programming world, so you cannot attend without us agreeing to it first.
+</p>
 
 <div style="display: block;">
   <div style="width: 340px; padding-right: 40px; display: inline-block; vertical-align: top;">
