--- a/app/views/invitation/_coach.html.haml
+++ b/app/views/invitation/_coach.html.haml
@@ -1,6 +1,6 @@
 %p Please let us know if you will be coaching at our session by setting your attendance status.
 
-%p The main theme of the session will be Voluptatem expedita aut sed quia quas.. You will be able to access it through our tutorials page soon. Students can choose any of the available tutorials to go through or ask for help on their own projects, so we ask that all coaches familiarise themselves with the tutorials in general.
+%p The main theme of the session will be #{@invitation.parent.title}. You will be able to access it through our tutorials page soon. Students can choose any of the available tutorials to go through or ask for help on their own projects, so we ask that all coaches familiarise themselves with the tutorials in general.
 
 %p
   Before committing to attend any of our sessions, make sure you read and understand our
