--- a/app/views/dashboard/show.html.haml
+++ b/app/views/dashboard/show.html.haml
@@ -113,16 +113,18 @@
 
     .right-block
       %br
-      %h4 Sponsors
-    .right-block
-      %ul.sponsors
-        - @sponsors.each do |sponsor|
+      %h4 Sponsors & Hosts
+    .right-block.sponsors
+      %ul
+        - @latest_sponsors.each do |sponsor|
           %li
             = link_to image_tag(sponsor.avatar, class: "sponsor-logo", alt: sponsor.name), sponsor.website
-    .become-a-sponsor
-      =mail_to "hello@codebar.io", "Sponsor codebar.io", subject: "I would like to sponsor codebar", class: 'sponsor-button'
+
+      .view-all
+        = link_to "View all", "#sponsors", class: "sponsor-button"
 
     .right-block
+      %br
       %h4 Gallery
     .right-block
       %ul.gallery
@@ -132,3 +134,9 @@
           =image_tag("pic2.jpg", height: '183px')
         %li
           =image_tag("pic3.jpg", height: '183px')
+
+  %section#sponsors
+    %ul
+      - @sponsors.each do |sponsor|
+        %li
+          = link_to image_tag(sponsor.avatar, class: "sponsor-logo", alt: sponsor.name), sponsor.website
