reduce sponsorship page list font

--- a/app/views/dashboard/show.html.haml
+++ b/app/views/dashboard/show.html.haml
@@ -104,7 +104,7 @@
         =link_to image_tag("twitter.png", width: '33px'), "https://twitter.com/by_codebar"
       %li
         =link_to image_tag("facebook.png", width: '33px'), "https://facebook.com/bycodebar"
-    .right-block
+    .right-block.support-us
       %h4 Support us
     .right-block.center
       %br
