Suggestions for the sponsorship wording

--- a/app/views/dashboard/sponsoring.html.haml
+++ b/app/views/dashboard/sponsoring.html.haml
@@ -23,13 +23,13 @@
         ourselves.
 
     %p
-      We don't distinguish between sponsors (we display all logos on our website in a random order) and would prefer to not accept monetary donations greater than £100. Our aim is to have a balance of £150 as a start, so we can cater for our small ongoing expenses - like server usage - and be able to help some of our students by paying for their travel tickets, or part of.
+      We don't distinguish between sponsors (we display all logos on our website in a random order) and would prefer to not accept monetary donations greater than £100. The money will be used for small ongoing expenses such as server usage, as well as to help subsidise travel tickets for some of our students.
 
     %p
-      We would also be happy with a sponsor paying directly for some of the expenses e.g. getting us stickers, badges etc, but we need a good communication channel and clear information of what we need to do to make this work if they rely on content received by us ( for example logo for stickers).
+      We can also accept sponsorship in the form of supplies such as stickers and badges. We'd appreciate it if there was a single person from the sponsor's company we could coordinate with, rather than playing "pass the message"!
 
     %p
-      That wouldn't work well for things like service accounts as we need to have full authority over them. Regarding our server, Heroku credit is also a form of sponsorship we would be able to accept.
+      Unfortunately we can't accept donations of spare infrastructure (e.g. web space, email accounts) as we need to have the authority to control our systems. That said, Heroku credit is also a form of sponsorship we would be able to accept.
 
     %p
       We also accept anonymous donations via Gittip.
@@ -37,6 +37,6 @@
         %script{ :"data-gittip-username" => "by_codebar", :src => "//gttp.co/v1.js" }
 
     %p
-      <b>As a thank you</b> we will list your logo on our website and tweet about the help you have offered us. You can also put up your company's banner up in a session and give us your swag to give out to people. However, we are not comfortable with recruitment in any of our events. If you have internships, apprentiships or junior positions available that our students might be interested in,
+      <b>As a thank you</b> we will list your logo on our website and tweet about how you've helped us. You can also put up your company's banner up in a session and give us some swag to give out. However, we are not comfortable with recruitment at any of our events. If you have internships, apprenticeships or junior positions that our students might be interested in,
       = mail_to "hello@codebar.io", "send us an email"
       so we can discuss this further.
