display attending coaches and setting attendance for admin

--- a/app/assets/stylesheets/style.css.sass
+++ b/app/assets/stylesheets/style.css.sass
@@ -177,7 +177,6 @@ a
   padding-bottom: 20px
   min-height: 450px
 
-
   input, textarea
     margin-right: 10px
 
@@ -208,6 +207,10 @@ a
     transition-duration: 0.2s
     color: $become-member-white
 
+  .btn.small
+    padding: 5px 15px
+    font-size: 14px
+    color: $become-member-white
 
   textarea
     height: 107px
@@ -527,7 +530,7 @@ footer
   padding: 90px
   text-align: center
   line-height: 2em
-  
+
   .success
     color: #005000
     border: 1px solid #0f0
@@ -602,3 +605,12 @@ footer
 
   .git-tip
     text-align: center
+
+.attendances
+  li
+    border-bottom: 1px solid $navigation-gray-separators
+    padding-bottom: 5px
+
+    .quarter
+      padding-top: 10px
+      text-align: center
