fix invitation display for members with both roles

--- a/app/views/portal/_coach.html.haml
+++ b/app/views/portal/_coach.html.haml
@@ -6,7 +6,7 @@
 
   .description
     .details-block
-      - @upcoming.each do |invitation|
+      - @upcoming_coach.each do |invitation|
         .three-quarters
           %h3
             = invitation.parent.title
