make 'guide' part of link as per Leo's suggestion

--- a/app/views/invitation/_coach.html.haml
+++ b/app/views/invitation/_coach.html.haml
@@ -14,5 +14,4 @@
   %li
     =link_to "Codebar Tutorials", "https://codebar.github.io/codebar/tutorials"
   %li
-    =link_to "How to be an effective teacher", "https://github.com/codebar/planner/issues/53"
-    guide
+    =link_to "How to be an effective teacher guide", "https://github.com/codebar/planner/issues/53"
