link sponsoring page

--- a/app/views/dashboard/show.html.haml
+++ b/app/views/dashboard/show.html.haml
@@ -110,6 +110,9 @@
       %br
       %script{ :"data-gittip-username" => "by_codebar", :src => "//gttp.co/v1.js" }
       %br
+      %br
+      =link_to "Sponsoring", sponsoring_path, class: 'sponsor-button'
+      %br
 
     .right-block
       %br
